--- a/src/FamilyAlbum/Views/Families/Upload.cshtml
+++ b/src/FamilyAlbum/Views/Families/Upload.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@{
+    Layout = "";
+}
+
 <form enctype="multipart/form-data" id="family-image" name="family-image" asp-action="Upload" method="post">
     <div class="form-group">
         <div class="col-md-10">
