--- a/src/FamilyAlbum/Views/Posts/FamilyPosts.cshtml
+++ b/src/FamilyAlbum/Views/Posts/FamilyPosts.cshtml
@@ -12,7 +12,7 @@
 </p>
 @if (Model.Count() == 0)
 {
-    <h2>Be the first in the family to <a asp-action="Create">create</a> a post</h2>
+    <h2>Be the first in the family to <a asp-action="Create">create</a> a post!</h2>
 }
 else
 {
