Crop correctly, but not save

--- a/src/FamilyAlbum/Views/Shared/_Layout.cshtml
+++ b/src/FamilyAlbum/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
             <h2>@user?.Family?.Name Family</h2>
             @if(user.Family.PhotoURL == null)
             {
-                <a asp-controller="families" asp-action="Edit" asp-route-id="@user.Family.FamilyId">Add a family photo</a>
+                <h3><a asp-controller="families" asp-action="Edit" asp-route-id="@user.Family.FamilyId">Add a family photo</a></h3>
             }
             else
             {
