--- a/src/FamilyAlbum/Views/Families/Join.cshtml
+++ b/src/FamilyAlbum/Views/Families/Join.cshtml
@@ -11,32 +11,28 @@
     <div class="form-horizontal">
         <h4>Family</h4>
         <hr />
-        <h5>Would you like to join the @Model.Name family?</h5>
+        <h2>Would you like to join the <b>@Model.Name</b> family?</h2>
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="FamilyId" />
         <div class="form-group">
-            <label asp-for="Motto" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input type="hidden" asp-for="Motto" class="form-control" />
                 <span asp-validation-for="Motto" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input type="hidden" asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="PhotoURL" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input type="hidden" asp-for="PhotoURL" class="form-control" />
                 <span asp-validation-for="PhotoURL" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Members" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input type="hidden" asp-for="Members" class="form-control" />
                 <span asp-validation-for="Members" class="text-danger" />
@@ -44,7 +40,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Yes!" class="btn btn-default" />
             </div>
         </div>
     </div>
