--- a/src/FamilyAlbum/wwwroot/css/styles.css
+++ b/src/FamilyAlbum/wwwroot/css/styles.css
@@ -103,6 +103,11 @@ body {
     border-bottom: 2px solid darkgrey;
 }
 
+/*Family/Edit*/
+
+#imgEmpPhoto {
+    image-orientation: from-image;
+}
 
 /*Posts*/
 .reply-badge-text {
