Add about and contact page plus some minor fixes

--- a/src/FamilyAlbum/Views/Home/Contact.cshtml
+++ b/src/FamilyAlbum/Views/Home/Contact.cshtml
@@ -1,17 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>@ViewData["Title"]</h2>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<h3 class="centered">Family Album is still in it's infancy. Please feel free to send comments or suggestions to <a href="mailto:cmwingo@gmail.com">cmwingo@gmail.com</a></h3>
+<h5 class="centered">or</h5>
+<h3 class="centered">Contribute on <a href="https://github.com/Cmwingo/FamilyAlbum">GitHub</a></h3>
+<footer>This site is dedicated to my family, which made it all possible</footer>
