--- a/src/FamilyAlbum/Views/Messages/Details.cshtml
+++ b/src/FamilyAlbum/Views/Messages/Details.cshtml
@@ -11,3 +11,4 @@
     <h3 class="message-detail-title">@Html.DisplayFor(model => model.Title)</h3>
     <p class="message-detail-body">@Html.DisplayFor(model => model.Body)</p>
 </div>
+<a asp-action="Index">Back to List</a>
