--- a/src/FamilyAlbum/Views/Home/About.cshtml
+++ b/src/FamilyAlbum/Views/Home/About.cshtml
@@ -1,7 +1,57 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="~/images/family1.jpg" alt="Organic Gummi">
+        </div>
+
+        <div class="item">
+            <img src="~/images/family2.jpg" alt="Giant Gummi">
+        </div>
+
+        <div class="item">
+            <img src="~/images/family3.jpg" alt="Gummi Jacket">
+        </div>
+
+        <div class="item">
+            <img src="~/images/family4.jpg" alt="DIY Gummi">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<div id="about">
+    
+    <p>
+        <span class="block-letter">F</span>amily Album is the one stop web portal for managing all your interactions with Family, past, and present. Whether it's showing off your latest vacation photos, or letting everyone know about the big barbecue at your place this weekend, Family Album is the place to do it! Be on the lookout for our new family genealogy feature to connect with the roots of your family.
+    </p>
+    <p>
+        <span class="block-letter">P</span>icture albums used to be the cornerstone around which family memories were built. Now in the digital age, our pictures are all over the cloud and our various devices. Family Album allows users to build a repository exclusively for family memories.
+    </p>
+    <p>
+        <span class="block-letter">N</span>ow you don't have to worry about forgetting all of grandma's great stories. You can post them here to the Family Album to save them for other family members to enjoy and for posterity.
+    </p>
+    <p>
+        <span class="block-letter">F</span>amily Album also supports direct messaging to anyone in your family for subjects of more narrow interest or private conversations.
+    </p>
+</div>
