--- a/src/FamilyAlbum/Views/Messages/Index.cshtml
+++ b/src/FamilyAlbum/Views/Messages/Index.cshtml
@@ -14,20 +14,19 @@
 
     @foreach (var item in Model)
     {
-        @foreach (var recipient in item.Recipients)
-        {
-            @if (recipient.ApplicationUserId == ViewBag.CurrentUserId)
+        <div class="message">
+            @if (item.Read == false)
             {
-                <div class="message">
-                    @if (item.Read == false)
-                    {
-                        <img src="~/images/newsm.png" class="message-new" />
-                    }
-                    <p class="message-sender">@item?.Sender?.FirstName</p>
-                    <a asp-action="Details" asp-route-id="@item.MessageId" class="message-link"><h5 class="message-subject">@item?.Title</h5></a>
-                    <a asp-action="Delete" asp-route-id="@item.MessageId"><h6 class="message-delete-link">Delete</h6></a>
-                 </div>
+                <img src="~/images/newsm.png" class="message-new" />
             }
-        }
+        <p class="message-sender">@item?.Sender?.FirstName</p>
+        <a asp-action="Details" asp-route-id="@item.MessageId" class="message-link"><h5 class="message-subject">@item?.Title</h5></a>
+        <a asp-action="Delete" asp-route-id="@item.MessageId"><h6 class="message-delete-link">Delete</h6></a>
+        </div>
+    }
+    @if(Model.Count() == 0)
+    {
+        <h2 class="centered">You have no messages</h2>
+
     }
 </div>
