--- a/src/FamilyAlbum/Views/PhotoAlbums/FamilyAlbums.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/FamilyAlbums.cshtml
@@ -37,4 +37,8 @@
         }
     </div>
 }
+@if (Model.Count() == 0)
+{
+    <h2 class="centered">Be the first in your family to <a asp-action="Create">create </a>a photo album!</h2>
+}
 
