--- a/src/FamilyAlbum/Views/PhotoAlbums/UserAlbums.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/UserAlbums.cshtml
@@ -42,3 +42,8 @@
         }
     </div>
 }
+@if (Model.Count() == 0)
+{
+    <h2 class="centered">To get started <a asp-action="Create">create </a>your first photo album!</h2>
+}
+
