--- a/src/FamilyAlbum/Views/Images/Details.cshtml
+++ b/src/FamilyAlbum/Views/Images/Details.cshtml
@@ -5,45 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>@Html.DisplayFor(model => model.Name)</h2>
 
 <div>
-    <h4>Image</h4>
+    <h4>@Html.DisplayFor(model => model.Caption)</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Caption)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Caption)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.FilePath)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.FilePath)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UploadTime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UploadTime)
-        </dd>
-    </dl>
+    <img src="@Model.FilePath" />
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ImageId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (Model.PhotoAlbum?.User.Email == User.Identity.Name)
+    {
+       <h3><a asp-action="Edit" asp-route-id="@Model.ImageId">Edit</a></h3> 
+    }
+    <p><a asp-controller="PhotoAlbums" asp-action="UserAlbums" asp-route-id="@Model?.PhotoAlbum?.PhotoAlbumId">Back to Albums</a></p>
 </div>
