--- a/src/FamilyAlbum/Views/PhotoAlbums/Add.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Add.cshtml
@@ -21,41 +21,8 @@
 </script>
 
 
-<h2>Add</h2>
+<h2>Add to @Html.DisplayFor(model => model.Name) album</h2>
 
-<div>
-    <h4>PhotoAlbum</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DateEnd)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateEnd)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateStart)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateStart)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.PhotoAlbumId">Edit</a> |
-    <a asp-action="UserAlbums">Back to List</a>
     <br /><br /><br />
     <div id="upload-view" style="display:block">
         <h5>@ViewBag.Result</h5>
