--- a/src/FamilyAlbum/Views/PhotoAlbums/Details.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Details.cshtml
@@ -16,7 +16,9 @@
         {
             <div class="photoalbum-image-wrapper flex-item">
                 <p>@Html.DisplayFor(modelImage => image.Name)</p>
-                <img class="photoalbum-image" src="@image.FilePath" />
+                <a asp-controller="Images" asp-action="Details" asp-route-id="@image.ImageId">
+                    <img class="photoalbum-image" src="@image.FilePath" />
+                </a>
             </div>
         }
      </div>
@@ -30,40 +32,3 @@ else
 
 
 
-<h2>Details</h2>
-
-<div>
-    <h4>@Model.Name</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DateEnd)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateEnd)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateStart)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateStart)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.PhotoAlbumId">Edit</a> |
-    <a asp-action="UserAlbums">Back to List</a> |
-    <a asp-action="Add" asp-route-id="@Model.PhotoAlbumId">Add a photo</a>
-</div>
