--- a/src/FamilyAlbum/Views/Families/Edit.cshtml
+++ b/src/FamilyAlbum/Views/Families/Edit.cshtml
@@ -239,7 +239,9 @@
 
         function readFile(input) {
             if (input.files && input.files[0]) {
-                var reader = new FileReader();
+                //var reader = new FileReader();
+                var reader = loadImage.readFile(input, reader);
+                debugger;
                 var canvas = $("#canvas")[0];
                 var context = canvas.getContext('2d');
                 var orientation;
@@ -252,7 +254,7 @@
                 reader.onload = function (e) {
                     $('#imgEmpPhoto').attr('src', "");
                     var img = $('#imgEmpPhoto').attr('src', e.target.result);
-                                        loadImage.parseMetaData(input.files[0], function (data) {
+                    loadImage.parseMetaData(input.files[0], function (data) {
                         orientation = data.exif.get('Orientation');
                         console.log(orientation);
                         switch (orientation) {
@@ -360,8 +362,18 @@
         }
 
         $('#flPhoto').change(function () {
+            //    loadImage(
+            //        e.target.files[0],
+            //        function (img) {
+            //            document.body.appendChild(img);
+            //        },
+            //        {
+            //            maxWidth: 600,
+            //            orientation: true } // Options
+            //        );
+            //});
             readFile(this);
-            //initCrop();
+            debugger;
         });
 </script>
 }
