--- a/src/FamilyAlbum/Views/Images/Delete.cshtml
+++ b/src/FamilyAlbum/Views/Images/Delete.cshtml
@@ -13,41 +13,23 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Caption)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Caption)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.FilePath)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.FilePath)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.UploadTime)
+            @Html.DisplayNameFor(model => model.Caption)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UploadTime)
+            @Html.DisplayFor(model => model.Caption)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="UserAlbums" asp-controller="PhotoAlbums">Back to albums</a>
         </div>
     </form>
 </div>
