--- a/src/FamilyAlbum/Views/PhotoAlbums/Upload.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Upload.cshtml
@@ -6,7 +6,7 @@
     <div class="form-group">
         <div class="col-md-10">
             <label>Image Name</label>
-            <input type="text" name="name" />
+            <input type="text" name="name" required />
         </div>
     </div>
     <div class="form-group">
