--- a/src/FamilyAlbum/Views/PhotoAlbums/Details.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Details.cshtml
@@ -28,7 +28,5 @@ else
     <h3>There are no images in this album yet. <a asp-action="Add" asp-route-id="@Model.PhotoAlbumId">Add a photo to get started.</a>
 </h3>
 }
-
-
-
-
+<br />
+<p><a asp-controller="PhotoAlbums" asp-action="UserAlbums" >Back to Albums</a></p>
