--- a/src/FamilyAlbum/Views/Families/Create.cshtml
+++ b/src/FamilyAlbum/Views/Families/Create.cshtml
@@ -27,9 +27,8 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="PhotoURL" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="PhotoURL" class="form-control" />
+                <input asp-for="PhotoURL" class="form-control" type="hidden" />
                 <span asp-validation-for="PhotoURL" class="text-danger" />
             </div>
         </div>
